# CS-but_Cpp

./: .gitignore  CMakeLists.txt  HOW_TO_USE.txt  README.md  gamestate_integration_cs2.cfg  gamestate_integration_csbut.cfg  settings.json
Utils/: greenbgremover.py  image_resizer.py  imagecropper.py  renamer.py
app/: CMakeLists.txt
app/include/app/: Asset.h  EffectImage.h  ImageSequencePlayer.h  KillEffectWindow.h  SettingWindow.h  WindowsFileDialog.h  setting_window.h
app/src/: EffectImage.cpp  GGApp.cpp  ImageSequencePlayer.cpp  KillEffectWindow.cpp  SettingWindow.cpp  setting_window.cpp
assets/: asset_config.json
gui/: CMakeLists.txt
gui/include/Input/: Input.h  KeyCodes.h
gui/include/gui/: Application.h  EntryPoint.h  Image.h  Layer.h  Random.h  SteamworksHelper.h  Timer.h
gui/src/: Application.cpp  Image.cpp  Input.cpp  Random.cpp  stb_image_iml.cpp
